<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >    
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
         >
    <TextView 
        android:id="@+id/tv_loginErr"
        android:textColor="@color/red"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="15dp"
            android:text="@string/e_mailaddress" />

        <EditText
            android:id="@+id/et_loginName"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userhint"
             />
    </LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="20dp"
	        android:paddingRight="15dp"
	        android:text="@string/password" />
	    <EditText
	        android:password="true"
            android:id="@+id/et_loginPasw"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paswhint"
             />
	</LinearLayout>
	<LinearLayout 
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:gravity="center"
	    android:layout_marginLeft="120dp"
	    android:layout_marginRight="120dp"
	    >
	    <Button 
	        android:id="@+id/bt_login"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/bt_login"
	        />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="120dp"
	    android:orientation="horizontal"
	    android:gravity="center"
	    >
	    <TextView 
	        android:layout_marginRight="15dp"
	        android:id="@+id/register"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:clickable="true"
	        android:text="@string/regist"
	        />
	    <TextView 
	        android:id="@+id/forgetpasw"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:clickable="true"
	        android:text="@string/foget"
	        />
	</LinearLayout>

</LinearLayout>